--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "linking-ui",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -39,5 +39,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/ngr05/linking-ui.git"
+  },
+  "author": "Nick Green <Nicholas.Green@skybettingandgaming.com>",
+  "bugs": {
+    "url": "https://github.com/ngr05/linking-ui/issues"
+  },
+  "homepage": "https://github.com/ngr05/linking-ui#readme"
 }
