--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.16",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "playwright": "^1.35.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
@@ -21,7 +22,16 @@
     "start": "react-scripts start",
     "prebuild": "rm -rf build",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "npm run test:unit && npm run test:integration:local",
+    "test:integration": "echo 'to be implemented'; exit 1;",
+    "test:integration:local": "APP_URL=http://localhost:3000 npm run test:integration",
+    "test:integration:test": "echo 'not implemented'; exit 1;",
+    "test:integration:staging": "echo 'not implemented'; exit 1;",
+    "test:integration:production": "echo 'not implemented'; exit 1;",
+    "pretest:integration:local": "docker compose up -d",
+    "posttest:integration:local": "docker compose down -v",
+    "test:unit": "react-scripts test --coverage --watchAll=false",
+    "test:unit:watch": "npm run test:unit -- --watchAll=true",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -53,5 +63,12 @@
   "homepage": ".",
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+  },
+  "jest": {
+    "coverageThreshold": {
+      "global": {
+        "lines": 80
+      }
+    }
   }
 }
