--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "prebuild": "rm -rf build",
     "build": "react-scripts build",
+    "lint": "eslint --ext .ts,.tsx ./src/**",
+    "lint:fix": "npm run lint -- --fix",
     "test": "npm run test:unit && npm run test:integration:local",
     "test:integration": "playwright test",
     "test:integration:report": "playwright show-report",
@@ -64,7 +65,15 @@
   "homepage": ".",
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@playwright/test": "^1.35.1"
+    "@playwright/test": "^1.35.1",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "eslint": "^8.44.0",
+    "eslint-config-standard-with-typescript": "^36.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "typescript": "^5.1.6"
   },
   "jest": {
     "coverageThreshold": {
